# rlbuddy

./: Cargo.toml  README.md  build.rs  download_icons.js
src/: app.rs  hotkey.rs  main.rs  ranks.rs  rl_stats_api.rs
src/app/: app.rs  matches.rs  mod.rs  player_list.rs
src/app/matches/: match_renderer.rs  widget.rs
src/core/: mod.rs  playlist.rs  rank.rs
src/rl/: mod.rs  skills.rs  stats_api.rs
src/ui/: hotkey.rs  mod.rs
src/ui/matches/: core.rs  match_renderer.rs  mod.rs  widget.rs
