[package]
name = "rank-display"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.3"
egui_extras = { version = "0.34.3", features = ["all_loaders"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
ureq = { version = "3.3.0", features = ["json"] }
urlencoding = "2.1.3"
websocket = "0.27.1"
